Backport the Xtend-to-Java migration to 9.x.x and compile rune-lang for Java 21 (#1408)
* Indent every line of multi-line text written to a CodeWriter (#1400)

* Indent every line of multi-line text written to a CodeWriter

* Fold multi-line writing into one loop and tighten the writer tests

Cover text starting with a line feed and non-string objects in the Xtend
bridge, and drop two tests that repeat existing coverage.

* Split Xtend rich strings in the bridge writer as well

A rich string is a StringConcatenation rather than a String, so the bridge
now splits any CharSequence.

(cherry picked from commit 35297512e91074c3fdceb7353c84e07a6190f7c5)

* Fix enum-dispatch function and runConditions layout in generated Java (#1398)

* Put closing braces of enum-dispatch functions on separate lines

Since the move of FunctionGenerator to the fluent API (#1293), a function
that dispatches on an enum value ended with the last nested class's closing
brace and the outer class's closing brace on one line (`    }}`). End each
nested class with a newline, as the Xtend template did, and restore the
expectations in FunctionOperationGeneratorTest.

Add a function-dispatch regression fixture so this layout is covered.

* Put each runConditions statement on its own line

Since the move of TypeFormatValidatorGenerator to the fluent API (#1376),
the generated runConditions method ran the per-attribute condition checks
and the final return together on one line, because a statement list only
separates its own statements. End each non-empty list with a newline, and
write nothing for attributes without conditions, as the Xtend template did.

Add a type-format-validation regression fixture so this layout is covered.

* Tidy up the migrated function, report and validator generators

Import HashMap and Comparator instead of writing them fully qualified, and
note why javax.inject.Inject and the RosettaReport annotation stay fully
qualified. Add the missing license headers, render the report's