@@ -1,11 +1,12 @@
 package com.regnosys.rosetta.generator.java.expression;
 
+import com.regnosys.rosetta.codegen.api.CodeRenderer;
 import com.regnosys.rosetta.generator.java.scoping.JavaIdentifierRepresentationService;
 import com.regnosys.rosetta.generator.java.statement.JavaLocalVariableDeclarationStatement;
 import com.regnosys.rosetta.generator.java.statement.JavaStatement;
 import com.regnosys.rosetta.generator.java.types.JavaTypeTranslator;
 import com.regnosys.rosetta.generator.java.types.JavaTypeUtil;
-import com.regnosys.rosetta.generator.java.util.ImportManagerExtension;
+import com.regnosys.rosetta.generator.java.util.FluentImportManager;
 import com.regnosys.rosetta.rosetta.RosettaModel;
 import com.regnosys.rosetta.rosetta.simple.Attribute;
 import com.regnosys.rosetta.tests.RosettaTestInjectorProvider;
@@ -19,11 +20,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.inject.Inject;
 
 import org.apache.commons.lang3.StringUtils;
-import org.eclipse.xtend2.lib.StringConcatenationClient;
 import org.eclipse.xtext.testing.InjectWith;
 import org.eclipse.xtext.testing.extensions.InjectionExtension;
 import org.junit.jupiter.api.Test;
@@ -42,7 +41,7 @@ public class ExpressionGeneratorTest {
     private ExpressionParser expressionParser;
 
     @Inject
-    private ImportManagerExtension importManagerExtension;
+    private FluentImportManager importManager;
 
     @Inject
     private JavaTypeTranslator javaTypeTranslator;
@@ -85,21 +84,13 @@ public class ExpressionGeneratorTest {
         var scope = scopeUtil.createTestExpressionScope(pkg);
         var fileScope = scope.getFileScope();
 
-        List<StringConcatenationClient> dependencyStatements = dependencies.stream()
+        List<CodeRenderer> dependencyStatements = dependencies.stream()
                 .map(dep -> {
                     var identifier = scope.createIdentifier(javaIdentifierRepresentationService.toDependencyInstance(dep), StringUtils.uncapitalize(dep.getSimpleName()));
                     var declaration = new JavaLocalVariableDeclarationStatement(false, dep, identifier);
-                    return new StringConcatenationClient() {
-                        @Override
-                        protected void appendTo(TargetStringConcatenation target) {
-                            target.append("@");
-                            target.append(Inject.class);
-                            target.append(" ");
-                            target.append(declaration);
-                        }
-                    };
+                    return (CodeRenderer) out -> out.write("@", Inject.class, " ", declaration);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         List<JavaStatement> statements = new ArrayList<>();
 
@@ -119,23 +110,15 @@ public class ExpressionGeneratorTest {
         
         var actualBody = statements.stream().reduce(JavaStatement::append).orElseThrow();
 
-        var content = new StringConcatenationClient() {
-            @Override
-            protected void appendTo(TargetStringConcatenation sc) {
-                for (int i = 0; i < dependencyStatements.size(); i++) {
-                    sc.append(dependencyStatements.get(i));
-                    if (i < dependencyStatements.size() - 1) {
-                        sc.append("\n");
-                    }
-                }
-                if (!dependencyStatements.isEmpty()) {
-                    sc.append("\n\n");
-                }
-                actualBody.appendTo(sc);
+        CodeRenderer content = out -> {
+            out.join(dependencyStatements, "\n");
+            if (!dependencyStatements.isEmpty()) {
+                out.write("\n\n");
             }
+            out.write(actualBody);
         };
 
-        String actual = importManagerExtension
+        String actual = importManager
                                 .buildClass(pkg, content, fileScope)
                                 .replace("package test.ns;", "")
                                 .replace("\r", "")
